devtools/client/themes/inspector.css
*
{
box
-
sizing
:
border
-
box
;
}
window
{
overflow
:
hidden
;
}
.
inspector
-
responsive
-
container
{
height
:
100vh
;
overflow
:
hidden
;
}
#
inspector
-
main
-
content
{
height
:
calc
(
100
%
-
1px
)
;
min
-
width
:
125px
;
display
:
flex
;
flex
-
direction
:
column
;
}
#
inspector
-
splitter
-
box
{
height
:
100vh
;
width
:
100vw
;
position
:
fixed
;
}
#
inspector
-
splitter
-
box
.
uncontrolled
#
inspector
-
splitter
-
box
.
controlled
{
min
-
height
:
50px
;
min
-
width
:
50px
;
overflow
-
x
:
hidden
;
}
.
inspector
-
tabpanel
{
min
-
width
:
200px
;
}
#
inspector
-
splitter
-
box
.
controlled
.
pane
-
collapsed
{
visibility
:
collapse
;
}
#
inspector
-
splitter
-
box
.
sidebar
-
toggle
:
:
before
{
background
-
image
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
close
-
3
-
pane
.
svg
"
)
;
transform
:
unset
;
}
#
inspector
-
splitter
-
box
.
sidebar
-
toggle
.
pane
-
collapsed
:
:
before
{
background
-
image
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
open
-
3
-
pane
.
svg
"
)
;
}
#
inspector
-
splitter
-
box
.
sidebar
-
toggle
:
dir
(
rtl
)
{
transform
:
scaleX
(
-
1
)
;
}
#
inspector
-
searchlabel
-
container
{
display
:
flex
;
}
#
inspector
-
searchlabel
-
container
[
hidden
]
{
display
:
none
;
}
#
inspector
-
searchlabel
{
padding
:
0
3px
;
}
#
inspector
-
element
-
add
-
button
:
:
before
{
background
-
image
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
add
.
svg
"
)
;
background
-
position
:
center
;
background
-
size
:
14px
;
-
moz
-
user
-
focus
:
normal
;
}
#
inspector
-
eyedropper
-
toggle
{
pointer
-
events
:
auto
;
}
#
inspector
-
eyedropper
-
toggle
:
:
before
{
background
-
image
:
url
(
images
/
command
-
eyedropper
.
svg
)
;
background
-
position
:
center
;
background
-
size
:
14px
;
}
#
inspector
-
breadcrumbs
-
toolbar
{
padding
:
0px
;
border
-
bottom
-
width
:
0px
;
border
-
top
-
width
:
1px
;
border
-
top
-
color
:
var
(
-
-
theme
-
splitter
-
color
)
;
background
-
color
:
var
(
-
-
theme
-
body
-
background
)
;
display
:
block
;
position
:
relative
;
}
#
inspector
-
breadcrumbs
-
toolbar
#
inspector
-
breadcrumbs
-
toolbar
*
{
box
-
sizing
:
border
-
box
;
direction
:
ltr
;
}
#
inspector
-
breadcrumbs
{
display
:
flex
;
position
:
absolute
;
top
:
0
;
left
:
0
;
bottom
:
0
;
right
:
0
;
}
#
inspector
-
breadcrumbs
.
scrollbutton
-
up
#
inspector
-
breadcrumbs
.
scrollbutton
-
down
{
flex
:
0
;
display
:
flex
;
align
-
items
:
center
;
}
#
inspector
-
breadcrumbs
.
html
-
arrowscrollbox
-
inner
{
flex
:
1
;
display
:
flex
;
overflow
:
hidden
;
}
#
inspector
-
breadcrumbs
.
breadcrumbs
-
widget
-
item
{
white
-
space
:
nowrap
;
flex
-
shrink
:
0
;
}
#
inspector
-
rules
-
container
#
inspector
-
sidebar
-
container
{
overflow
:
hidden
;
position
:
relative
;
height
:
100
%
;
}
#
inspector
-
rules
-
sidebar
#
inspector
-
sidebar
{
position
:
absolute
;
top
:
0
;
bottom
:
0
;
left
:
0
;
right
:
0
;
}
.
inspector
-
tabpanel
>
*
{
-
moz
-
user
-
focus
:
normal
;
}
iframe
{
border
:
0
;
}
#
markup
-
box
{
width
:
100
%
;
flex
:
1
;
min
-
height
:
0
;
}
#
markup
-
box
>
iframe
{
height
:
100
%
;
width
:
100
%
;
}

