Bug 1582866 - Make the inspector extension sidebar overflow. r=rpl.
Differential Revision: https://phabricator.services.mozilla.com/D47273

UltraBlame original commit: a093d517fc880a84ef49e50478b5078f84134975

--- a/devtools/client/themes/inspector.css
+++ b/devtools/client/themes/inspector.css
@@ -743,3 +743,24 @@ width
 %
 ;
 }
+.
+inspector
+-
+tabpanel
+.
+extension
+-
+sidebar
+{
+height
+:
+100
+%
+;
+overflow
+-
+y
+:
+auto
+;
+}
